# url-shortener

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  db.py  err.py  go.mod  go.sum  main.py  models.py  pyproject.toml
.github/workflows/: docker-image.yml
.github/workflows/workflows/: build.yml
internal/application/url/: usecase.go  usecase_test.go
internal/domain/url/: entity.go  repository.go  service.go  service_test.go
internal/infrastructure/cache/: redis_cache.go
internal/infrastructure/db/: postgres.go
internal/infrastructure/db/migrations/: 0001_init_urls.sql
internal/infrastructure/profiling/: server.go
internal/infrastructure/repository/: url_sqlx.go
internal/interfaces/http/: dto.go  handler.go  handler_test.go  response.go  router.go
internal/shared/config/: config.go
k8s/: app-configmap.yaml  app-deployment.yaml  app-hpa.yaml  app-secret.yaml  app-service.yaml  ingress.yaml  kustomization.yaml  pgbouncer-deployment.yaml  pgbouncer-service.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-secret.yaml  postgres-service.yaml  redis-deployment.yaml  redis-service.yaml
tests/load/: k6-url-shortener.js
